--- a/CV19/CV19.csproj
+++ b/CV19/CV19.csproj
@@ -1,9 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<UseWPF>true</UseWPF>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Folder Include="Data\" />
+		<Folder Include="Model\" />
+		<Folder Include="ViewModel\" />
+		<Folder Include="Services\" />
+		<Folder Include="Infrastructure\" />
+	</ItemGroup>
 
 </Project>
